pilot/pkg/security/authz/builder/testdata/action-external-HTTP-all-fields-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
  shadowRules:
    policies:
      ext-authz-matching-ns[foo]-policy[httpbin-1]-rule[0]:
        permissions:
        - andRules:
            rules:
            - orRules:
                rules:
                - header:
                    exactMatch: exact.com
                    name: :authority
                - header:
                    name: :authority
                    suffixMatch: .suffix.com
                - header:
                    name: :authority
                    prefixMatch: prefix.
                - header:
                    name: :authority
                    presentMatch: true
            - notRule:
                orRules:
                  rules:
                  - header:
                      exactMatch: not-exact.com
                      name: :authority
                  - header:
                      name: :authority
                      suffixMatch: .not-suffix.com
                  - header:
                      name: :authority
                      prefixMatch: not-prefix.
                  - header:
                      name: :authority
                      presentMatch: true
            - orRules:
                rules:
                - header:
                    exactMatch: method
                    name: :method
                - header:
                    name: :method
                    prefixMatch: method-prefix-
                - header:
                    name: :method
                    suffixMatch: -suffix-method
                - header:
                    name: :method
                    presentMatch: true
            - notRule:
                orRules:
                  rules:
                  - header:
                      exactMatch: not-method
                      name: :method
                  - header:
                      name: :method
                      prefixMatch: not-method-prefix-
                  - header:
                      name: :method
                      suffixMatch: -not-suffix-method
                  - header:
                      name: :method
                      presentMatch: true
            - orRules:
                rules:
                - urlPath:
                    path:
                      exact: /exact
                - urlPath:
                    path:
                      prefix: /prefix/
                - urlPath:
                    path:
                      suffix: /suffix
                - urlPath:
                    path:
                      safeRegex:
                        googleRe2: {}
                        regex: .+
            - notRule:
                orRules:
                  rules:
                  - urlPath:
                      path:
                        exact: /not-exact
                  - urlPath:
                      path:
                        prefix: /not-prefix/
                  - urlPath:
                      path:
                        suffix: /not-suffix
                  - urlPath:
                      path:
                        safeRegex:
                          googleRe2: {}
                          regex: .+
            - orRules:
                rules:
                - destinationPort: 80
                - destinationPort: 90
            - notRule:
                orRules:
                  rules:
                  - destinationPort: 8000
                  - destinationPort: 9000
            - orRules:
                rules:
                - destinationIp:
                    addressPrefix: 10.10.10.10
                    prefixLen: 32
                - destinationIp:
                    addressPrefix: 192.168.10.0
                    prefixLen: 24
            - notRule:
                orRules:
                  rules:
                  - destinationIp:
                      addressPrefix: 90.10.10.10
                      prefixLen: 32
                  - destinationIp:
                      addressPrefix: 90.168.10.0
                      prefixLen: 24
            - orRules:
                rules:
                - destinationPort: 91
                - destinationPort: 92
            - notRule:
                orRules:
                  rules:
                  - destinationPort: 9001
                  - destinationPort: 9002
            - orRules:
                rules:
                - requestedServerName:
                    exact: exact.com
                - requestedServerName:
                    suffix: .suffix.com
                - requestedServerName:
                    prefix: prefix.
                - requestedServerName:
                    safeRegex:
                      googleRe2: {}
                      regex: .+
            - notRule:
                orRules:
                  rules:
                  - requestedServerName:
                      exact: not-exact.com
                  - requestedServerName:
                      suffix: .not-suffix.com
                  - requestedServerName:
                      prefix: not-prefix.
                  - requestedServerName:
                      safeRegex:
                        googleRe2: {}
                        regex: .+
            - orRules:
                rules:
                - metadata:
                    filter: envoy.filters.a.b
                    path:
                    - key: c
                    value:
                      stringMatch:
                        exact: exact
                - metadata:
                    filter: envoy.filters.a.b
                    path:
                    - key: c
                    value:
                      stringMatch:
                        prefix: prefix-
                - metadata:
                    filter: envoy.filters.a.b
                    path:
                    - key: c
                    value:
                      stringMatch:
                        suffix: -suffix
                - metadata:
                    filter: envoy.filters.a.b
                    path:
                    - key: c
                    value:
                      stringMatch:
                        safeRegex:
                          googleRe2: {}
                          regex: .+
            - notRule:
                orRules:
                  rules:
                  - metadata:
                      filter: envoy.filters.a.b
                      path:
                      - key: c
                      value:
                        stringMatch:
                          exact: not-exact
                  - metadata:
                      filter: envoy.filters.a.b
                      path:
                      - key: c
                      value:
                        stringMatch:
                          prefix: not-prefix-
                  - metadata:
                      filter: envoy.filters.a.b
                      path:
                      - key: c
                      value:
                        stringMatch:
                          suffix: -not-suffix
                  - metadata:
                      filter: envoy.filters.a.b
                      path:
                      - key: c
                      value:
                        stringMatch:
                          safeRegex:
                            googleRe2: {}
                            regex: .+
        principals:
        - andIds:
            ids:
            - orIds:
                ids:
                - sourceIp:
                    addressPrefix: 1.2.3.4
                    prefixLen: 32
                - sourceIp:
                    addressPrefix: 5.6.0.0
                    prefixLen: 16
            - notId:
                orIds:
                  ids:
                  - sourceIp:
                      addressPrefix: 9.0.0.1
                      prefixLen: 32
                  - sourceIp:
                      addressPrefix: 9.2.0.0
                      prefixLen: 16
            - orIds:
                ids:
                - header:
                    exactMatch: header
                    name: X-header
                - header:
                    name: X-header
                    prefixMatch: header-prefix-
                - header:
                    name: X-header
                    suffixMatch: -suffix-header
                - header:
                    name: X-header
                    presentMatch: true
            - notId:
                orIds:
                  ids:
                  - header:
                      exactMatch: not-header
                      name: X-header
                  - header:
                      name: X-header
                      prefixMatch: not-header-prefix-
                  - header:
                      name: X-header
                      suffixMatch: -not-suffix-header
                  - header:
                      name: X-header
                      presentMatch: true
            - orIds:
                ids:
                - sourceIp:
                    addressPrefix: 10.10.10.10
                    prefixLen: 32
                - sourceIp:
                    addressPrefix: 192.168.10.0
                    prefixLen: 24
            - notId:
                orIds:
                  ids:
                  - sourceIp:
                      addressPrefix: 90.10.10.10
                      prefixLen: 32
                  - sourceIp:
                      addressPrefix: 90.168.10.0
                      prefixLen: 24
